# server

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .golangci.yaml  .mockery.yaml  .npmrc  .pre-commit-config.yaml  .prettierignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  LICENSE.txt  Makefile  Taskfile.yaml  a.md  a.mmd  a.sql  a.txt  b.mmd  buf.gen.yaml  buf.yaml  config.example.toml  config.example.yaml  go.mod  go.sum  gqlgen.yml  gunicorn.conf.py  license.txt  main.go  package-lock.json  package.json  pyproject.toml  readme.md  rust-toolchain.toml  schema.graphql  setup.cfg  (+1 more)
.chglog/: config.yml
.github/: codecov.yml  contributing.md  mergify.yml  pull_request_template.md  renovate.json  vulncheck-issue-template.md
auth/: mysql_repository.go  mysql_repository_test.go  service.go  service_test.go  user_test.go
cache/: interface.go  memory.go  memory_test.go  mock_Generic.go  redis.go  redis_test.go
canal/: canal.go  event.go  ifce.go  mq_internal_test.go  on_character.go  on_person.go  on_subject.go  on_user.go  redis.go  stream_kafka.go  stream_redis.go
character/: mysql_repository.go  mysql_repository_test.go  service.go
cmd/: cmd.go
compat/: tags.go  tags_test.go  wiki.go  wiki_internal_test.go
config/: config.go  new.go  origin.go  version.go
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/src/server/: characters.rs  media.rs  mod.rs  persons.rs  subjects.rs  test_mocks.rs  users.rs
crates/app/src/worker/: mod.rs  timeline.rs
crates/app/src/worker/canal/: character.rs  mod.rs  person.rs  search_event.rs  subject.rs  types.rs  user.rs
crates/app/tests/: server_real_deps.rs  server_smoke.rs
crates/app/tests/common/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
ctrl/: count_episode_for_subject.go  create_private_message.go  ctrl.go  error.go  get_actors.go  get_character.go  get_character_related_subject.go  get_episode.go  get_index.go  get_person.go  get_person_related_subject.go  get_subject.go  get_subject_related_characters.go  get_subject_related_subject.go  get_topic.go  get_user.go  list_episodes.go  update_episode_progress.go  update_subject_collection.go
dal/: fx.go  log.go  metrics.go  new.go  new_test.go  soft_delete.go  transaction.go
dao/: chii_apps.go  chii_blog_comments.go  chii_blog_entry.go  chii_blog_photo.go  chii_crt_comments.go  chii_crt_subject_index.go  chii_doujin_club_comments.go  chii_doujin_club_posts.go  chii_doujin_club_related_blog.go  chii_doujin_club_timeline.go  chii_doujin_club_topics.go  chii_doujin_preorder.go  chii_doujin_subject_comments.go  chii_doujin_subject_event_index.go  chii_doujin_subjects.go  chii_eden.go  chii_eden_members.go  chii_ep_comments.go  chii_ep_revisions.go  chii_episodes.go  chii_event_club_index.go  chii_event_collects.go  chii_event_topics.go  chii_events.go  chii_friends.go  chii_group_members.go  chii_group_posts.go  chii_group_topics.go  chii_likes.go  chii_magi_answered.go  chii_magi_members.go  chii_members.go  chii_network_services.go  chii_oauth_access_tokens.go  chii_oauth_authorization_codes.go  chii_oauth_scopes.go  chii_onlinetime.go  chii_person_alias.go  chii_person_collects.go  chii_person_cs_index.go  (+13 more)
docs/: rust-migration-plan.md  rust-workspace.md
domain/: auth.go  auth_test.go  character.go  common.go  episode.go  error.go  index.go  mock_AuthRepo.go  mock_CharacterRepo.go  mock_EpisodeRepo.go  mock_IndexRepo.go  mock_PersonRepo.go  mock_RevisionRepo.go  mock_SubjectRepo.go  mock_SubjectService.go  mock_UserRepo.go  person.go  relation.go  revision.go  subject.go  user.go
dto/: chii_app_collects.go  chii_characters.go  chii_crt_cast_index.go  chii_crt_revisions.go  chii_crt_subject_index_bak_240803.go  chii_doujin_club_fields.go  chii_doujin_club_members.go  chii_doujin_clubs.go  chii_doujin_invites.go  chii_doujin_preorder_return.go  chii_doujin_subject_attr_tags.go  chii_doujin_subject_club_index.go  chii_doujin_subject_collects.go  chii_doujin_subject_photos.go  chii_ep_status.go  chii_event_posts.go  chii_failedlogins.go  chii_gadgets.go  chii_groups.go  chii_index.go  chii_index_collects.go  chii_index_comments.go  chii_index_related.go  chii_issues.go  chii_likes_bak_230331.go  chii_magi_questions.go  chii_memberfields.go  chii_notify.go  chii_notify_field.go  chii_oauth_clients.go  chii_oauth_jwt.go  chii_oauth_refresh_tokens.go  chii_os_web_sessions.go  chii_person_relationship.go  chii_persons.go  chii_regips.go  chii_resources.go  chii_robot_personality.go  chii_robot_speech.go  chii_searchindex.go  (+16 more)
ent/: characterfields.go  characterfields_create.go  characterfields_delete.go  characterfields_query.go  characterfields_update.go  client.go  config.go  ent.go  mutation.go  person.go  person_create.go  person_delete.go  person_query.go  person_update.go  personcsindex.go  personcsindex_create.go  personcsindex_delete.go  personcsindex_query.go  personcsindex_update.go  runtime.go  tx.go
episode/: mysql_repository.go  mysql_repository_test.go
etc/: Dockerfile  Dockerfile.rust  archive.Dockerfile  canal.Dockerfile  mock.task.yaml
graph/: generated.go  resolver.go  schema.graphql  schema.graphqls  schema.resolvers.go
index/: mysql_repository.go  mysql_repository_test.go
mocks/: AuthRepo.go  AuthService.go  CaptchaManager.go  CharacterRepo.go  CharacterService.go  EpisodeRepo.go  Generic.go  IndexRepo.go  PersonRepo.go  PersonService.go  RateLimiter.go  RevisionRepo.go  SessionManager.go  SessionRepo.go  SubjectRepo.go  SubjectService.go  UserRepo.go  readme.md
model/: character.go  group.go  group_test.go  image.go  index.go  person.go  relation.go  revision.go  revision.type.go  subject.go  subject.type.go  type.go  user.go
openapi/: build.js  bundle.js  dev-server.js  embed.go  index.html  private.html  private.yaml  readme.md  test.js  v0.html  v0.yaml
person/: mysql_repository.go  mysql_repository_test.go  service.go
pkg/: readme.md
pol/: config.py  depends.py  res.py  router.py  sa.py  server.py  test.py
revision/: mysql_repository.go  (+2 more)
(+1385 files in other folders)
