[workspace]
members = [
  "crates/common",
  "crates/app",
  "crates/php-serialize",
]
resolver = "3"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_php = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4", features = ["derive"] }
rdkafka = { version = "0.36", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros"] }
redis = { version = "0.27", features = ["tokio-comp"] }
meilisearch-sdk = "0.28"
opendal = { version = "0.55", features = ["services-s3"] }
bangumi-wiki-parser = { git = "https://github.com/bangumi/server-private", package = "bangumi-wiki-parser" }
php-serialize = { path = "crates/php-serialize" }
