[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pol"
version = "0.3.4"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "3.8.*"
# dependencies
fastapi = "==0.70.1"
pydantic = "==1.8.2"
python-dateutil = "2.8.2"
python-multipart = "0.0.5"
pytz = "2021.3"
uvicorn = { version = "==0.16.0", extras = ["standard"] }
databases = { version = "0.5.3", extras = ["mysql"] }
aiomysql = '0.0.22'
orjson = "==3.6.5"
loguru = "^0.5.3"
SQLAlchemy = { extras = ["mypy"], version = "^1.4.27" }
aioredis = {extras = ["hiredis"], version = "^2.0.0"}

[tool.poetry.dev-dependencies]
sqlacodegen = "2.3.0"
# tests
coverage = { version = "==6.2", extras = ["toml"] }
pytest = "==6.2.5"
# linter and formatter
pre-commit = "==2.16.0"
flake8 = '==4.0.1'
flake8-comprehensions = "==3.7.0"
flake8-bugbear = "==21.11.29"
flake8-commas = "==2.1.0"
flake8-mutable = "1.2.0"
flake8-broken-line = "==0.4.0"
flake8-pytest-style = "==1.5.1"
mypy = "==0.910"
requests = "2.26.0"
types-pytz = "2021.3.2"
pytest-github-actions-annotate-failures = "0.1.6"
pytest-env = "0.6.2"
redis = {extras = ["hiredis"], version = "4.0.2"}
flake8-tidy-imports = "^4.5.0"

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":',
  'raise NotImplementedError'
]

[tool.pytest.ini_options]
addopts = '-rav'
env = [
  'D:TESTING=true'
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = ['sqlalchemy.ext.mypy.plugin']
