[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pol"
version = "0.6.0"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "3.8.*"
# dependencies
fastapi = "0.71.0"
pydantic = "1.9.0"
python-dateutil = "2.8.2"
python-multipart = "0.0.5"
pytz = "2021.3"
uvicorn = { version = "0.17.0", extras = ["standard"] }
aiomysql = '0.0.22'
orjson = "3.6.5"
loguru = "0.5.3"
SQLAlchemy = { extras = ["mypy", "asyncio"], version = "1.4.29" }
aioredis = { extras = ["hiredis"], version = "2.0.1" }
power-cache = "0.1.1"

[tool.poetry.dev-dependencies]
sqlacodegen = "2.3.0"
# tests
coverage = { version = "6.2", extras = ["toml"] }
pytest = "6.2.5"
# linter and formatter
pre-commit = "2.16.0"
flake8 = '4.0.1'
flake8-comprehensions = "3.8.0"
flake8-bugbear = "22.1.11"
flake8-broken-line = "0.4.0"
flake8-pytest-style = "1.6.0"
mypy = "0.931"
requests = "2.27.1"
types-pytz = "2021.3.4"
pytest-github-actions-annotate-failures = "0.1.6"
pytest-env = "0.6.2"
redis = { extras = ["hiredis"], version = "4.1.0" }
flake8-tidy-imports = "4.6.0"

[tool.coverage.run]
concurrency = ['thread', 'greenlet']

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":',
  'raise NotImplementedError'
]

[tool.pytest.ini_options]
addopts = '-rav -W error::sqlalchemy.exc.RemovedIn20Warning'
env = [
  'D:TESTING=true',
  'SQLALCHEMY_WARN_20=true',
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = ['sqlalchemy.ext.mypy.plugin', 'pydantic.mypy']

[tool.black]
target_version = ['py38']
