[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
meilisearch-sdk.workspace = true
opendal.workspace = true
bangumi-wiki-parser.workspace = true
php-serialize.workspace = true
axum = "0.7"
uuid = { version = "1", features = ["v7"] }
utoipa = { version = "5", features = ["axum_extras"] }
async-trait = "0.1"
common = { path = "../common" }

[target.'cfg(windows)'.dependencies]
rdkafka = { workspace = true, features = ["cmake-build"] }

[target.'cfg(unix)'.dependencies]
rdkafka = { workspace = true, features = ["cmake-build", "static-linking", "ssl-vendored", "curl-static", "libz-static"] }

[dev-dependencies]
tower = "0.5"
mockall = "0.13"
