[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true

[target.'cfg(unix)'.dependencies]
rdkafka = { workspace = true, features = ["cmake-build", "tokio", "ssl-vendored"] }

[target.'cfg(not(unix))'.dependencies]
rdkafka = { workspace = true, features = ["cmake-build", "tokio"] }
